[gd_scene load_steps=3 format=3 uid="uid://startscreen"]
[ext_resource type="Script" path="res://scripts/StartScreen.gd" id=1]
[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
custom_constants/separation = 12.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
text = "Treasure Dash"
theme_font_size = 48
align = 1
valign = 1

[node name="InstructionsLabel" type="Label" parent="VBoxContainer"]
text = "Enter your player name and press Start.\nUse keyboard or touch controls to play."
theme_font_size = 18
align = 1
valign = 1

[node name="NameLineEdit" type="LineEdit" parent="VBoxContainer"]
placeholder_text = "Player Name"
size_flags_horizontal = 3

[node name="StartButton" type="Button" parent="VBoxContainer"]
text = "Start"

[node name="CloseButton" type="Button" parent="VBoxContainer"]
text = "Close"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/CloseButton" to="." method="_on_close_pressed"]

[connection signal="ready" from="." to="." method="_ready"]

script = ExtResource(1)